// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchNavigation should render the UI correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col self-strectch w-full items-end"
      >
        <div
          class="flex flex-row align-top m-2 searchBar undefined"
        >
          <div
            class="flex flex-col flex-grow "
            style="height: 40px;"
          >
            <div
              class="flex flex-row items-center input search-textfield-input input-focus "
            >
              <input
                class="body-1 search-textfield"
                name="search-Field"
                placeholder="Search for claims, documents, and more..."
                type="text"
                value="teladoc"
              />
              <div
                class="flex flex-col items-end"
              >
                <button
                  class="flex flex-col p-[0.125rem]  "
                  type="submit"
                >
                  <img
                    alt="Search"
                    class="icon searchhover "
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                    style="color: transparent;"
                    width="40"
                  />
                </button>
              </div>
            </div>
            <div
              class="searchSuggestion scroll"
            >
              <div
                class="flex flex-row searchForField title-3 px-4 py-2"
              >
                <p
                  class="body-1 px-2"
                >
                  See all results for 
                </p>
                <p
                  class="body-1 font-bold"
                >
                  teladoc
                </p>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div>
                <div>
                  <p
                    class="body-1 title-3 py-2 px-4"
                  >
                    teladoc
                  </p>
                  <div
                    class=""
                    style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                  />
                  <p
                    class="body-1 body-1 py-2 px-4"
                  >
                    teladoc
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                  />
                </div>
              </div>
            </div>
          </div>
          <span
            style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
          />
          <div
            class="flex flex-col"
          >
            <span
              style="display: block; width: 1px; min-width: 1px; height: 14px; min-height: 14px;"
            />
            <img
              alt="CloseIcon"
              class=""
              data-nimg="1"
              decoding="async"
              height="12"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=32&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=16&q=75 1x, /_next/image?url=%2Fimg.jpg&w=32&q=75 2x"
              style="color: transparent;"
              width="12"
            />
          </div>
          <span
            style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col self-strectch w-full items-end"
    >
      <div
        class="flex flex-row align-top m-2 searchBar undefined"
      >
        <div
          class="flex flex-col flex-grow "
          style="height: 40px;"
        >
          <div
            class="flex flex-row items-center input search-textfield-input input-focus "
          >
            <input
              class="body-1 search-textfield"
              name="search-Field"
              placeholder="Search for claims, documents, and more..."
              type="text"
              value="teladoc"
            />
            <div
              class="flex flex-col items-end"
            >
              <button
                class="flex flex-col p-[0.125rem]  "
                type="submit"
              >
                <img
                  alt="Search"
                  class="icon searchhover "
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </button>
            </div>
          </div>
          <div
            class="searchSuggestion scroll"
          >
            <div
              class="flex flex-row searchForField title-3 px-4 py-2"
            >
              <p
                class="body-1 px-2"
              >
                See all results for 
              </p>
              <p
                class="body-1 font-bold"
              >
                teladoc
              </p>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
            />
            <div>
              <div>
                <p
                  class="body-1 title-3 py-2 px-4"
                >
                  teladoc
                </p>
                <div
                  class=""
                  style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                />
                <p
                  class="body-1 body-1 py-2 px-4"
                >
                  teladoc
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                />
              </div>
            </div>
          </div>
        </div>
        <span
          style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
        />
        <div
          class="flex flex-col"
        >
          <span
            style="display: block; width: 1px; min-width: 1px; height: 14px; min-height: 14px;"
          />
          <img
            alt="CloseIcon"
            class=""
            data-nimg="1"
            decoding="async"
            height="12"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=32&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=16&q=75 1x, /_next/image?url=%2Fimg.jpg&w=32&q=75 2x"
            style="color: transparent;"
            width="12"
          />
        </div>
        <span
          style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SearchNavigation should render the UI correctly 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col self-strectch w-full items-end"
      >
        <div
          class="flex flex-row align-top m-4"
        >
          <div
            class="flex flex-row"
          >
            <a>
              <p
                class="body-1 link-row-head"
              >
                Search
              </p>
            </a>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
            />
            <img
              alt="Search"
              class="icon items-end"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col self-strectch w-full items-end"
    >
      <div
        class="flex flex-row align-top m-4"
      >
        <div
          class="flex flex-row"
        >
          <a>
            <p
              class="body-1 link-row-head"
            >
              Search
            </p>
          </a>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
          />
          <img
            alt="Search"
            class="icon items-end"
            data-nimg="1"
            decoding="async"
            height="40"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
            style="color: transparent;"
            width="40"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
